ran models with new text column for joint tags

--- a/Precious/ps_nlp_models_and_tags.ipynb
+++ b/Precious/ps_nlp_models_and_tags.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from nltk import FreqDist\n",
     "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -1086,6 +1087,368 @@
     "print(f'Train score: {rfc.score(X_train_tv, y_train)}')\n",
     "print(f'Test score: {rfc.score(X_test_tv, y_test)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>DESCRIPTION_TRANSLATED</th>\n",
+       "      <th>LOAN_USE</th>\n",
+       "      <th>TAGS</th>\n",
+       "      <th>all_text</th>\n",
+       "      <th>processed_TAGS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Nora Luz is 55 years old, is separated from he...</td>\n",
+       "      <td>to buy merchandise.</td>\n",
+       "      <td>#Single, #Elderly, user_favorite, #Woman-Owned...</td>\n",
+       "      <td>nora luz 55 year old separated husband life di...</td>\n",
+       "      <td>single elderly user_favorite womanownedbusines...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Steven is a married man with four kids and is ...</td>\n",
+       "      <td>to add cattle to his farm.</td>\n",
+       "      <td>#Parent, #Animals, #Schooling, #Biz Durable Asset</td>\n",
+       "      <td>steven married man four kid resident sembabule...</td>\n",
+       "      <td>parent animals schooling bizdurableasset</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   STATUS                             DESCRIPTION_TRANSLATED  \\\n",
+       "0       1  Nora Luz is 55 years old, is separated from he...   \n",
+       "1       0  Steven is a married man with four kids and is ...   \n",
+       "\n",
+       "                     LOAN_USE  \\\n",
+       "0         to buy merchandise.   \n",
+       "1  to add cattle to his farm.   \n",
+       "\n",
+       "                                                TAGS  \\\n",
+       "0  #Single, #Elderly, user_favorite, #Woman-Owned...   \n",
+       "1  #Parent, #Animals, #Schooling, #Biz Durable Asset   \n",
+       "\n",
+       "                                            all_text  \\\n",
+       "0  nora luz 55 year old separated husband life di...   \n",
+       "1  steven married man four kid resident sembabule...   \n",
+       "\n",
+       "                                      processed_TAGS  \n",
+       "0  single elderly user_favorite womanownedbusines...  \n",
+       "1           parent animals schooling bizdurableasset  "
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kiva.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kiva['all_textntags'] = (kiva['DESCRIPTION_TRANSLATED']+kiva['LOAN_USE']+kiva['processed_TAGS'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Nora Luz is 55 years old, is separated from her husband, and lives in the district of Cayaltí in the Chiclayo province of the Lambayeque department of Perú.  She has many good references, both personal and for work.  The residents of this town mostly make a living in agriculture, commerce, and livestock.<br /><br />She makes a living selling costume jewelry, and has several years of experience in this field.  Her business is located in her home.  She is asking for the loan in order to buy merchandise.  In this way, she will be able to continue working and getting her own income.<br /><br />Nora Luz has loan experience; she is a recurrent member of Edpyme Alternativa.to buy merchandise.single elderly user_favorite womanownedbusiness user_favorite interestingphoto repeatborrower'"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kiva['all_textntags'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing html breaks\n",
+    "kiva['all_textntags'] = kiva['all_textntags'].str.replace('<br />', ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing punctuation from text\n",
+    "tokenizer = RegexpTokenizer('\\w+|\\$[\\d.]+|S+')\n",
+    "kiva['all_textntags'] = [tokenizer.tokenize(row.lower()) for row in kiva['all_textntags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing s's from ends of words to be able to count singulars and plurals together\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "kiva['all_textntags'] = [[lemmatizer.lemmatize(token) for token in token_list] for token_list in kiva['all_textntags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing most common english words from text\n",
+    "kiva['all_textntags'] = [[token for token in token_list if token not in stopwords.words('english')] for token_list in kiva['all_textntags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rejoining list of words in each row\n",
+    "kiva['all_textntags'] = [' '.join(row) for row in kiva['all_textntags']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kiva.to_csv('/Users/precious/dsi/Group-Project/kiva_connected_tags.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looking for duplicate posts\n",
+    "kiva['all_textntags'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xt = kiva['all_textntags']\n",
+    "yt = kiva['STATUS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(Xt, yt, stratify=y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tidf = TfidfVectorizer()\n",
+    "X_train_tidf = tidf.fit_transform(X_train)\n",
+    "X_test_tidf = tidf.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a list of the model classes to test\n",
+    "model_list = [\n",
+    "    LogisticRegression(max_iter=1000),\n",
+    "    GradientBoostingClassifier(),\n",
+    "    MultinomialNB(),\n",
+    "    AdaBoostClassifier()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>train_score</th>\n",
+       "      <th>test_score</th>\n",
+       "      <th>cv_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRegression(max_iter=1000)</td>\n",
+       "      <td>0.860644</td>\n",
+       "      <td>0.846112</td>\n",
+       "      <td>0.842771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GradientBoostingClassifier()</td>\n",
+       "      <td>0.839092</td>\n",
+       "      <td>0.838527</td>\n",
+       "      <td>0.837815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MultinomialNB()</td>\n",
+       "      <td>0.837781</td>\n",
+       "      <td>0.835216</td>\n",
+       "      <td>0.834671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AdaBoostClassifier()</td>\n",
+       "      <td>0.831822</td>\n",
+       "      <td>0.832066</td>\n",
+       "      <td>0.830591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          model_name  train_score  test_score  cv_score\n",
+       "0  LogisticRegression(max_iter=1000)     0.860644    0.846112  0.842771\n",
+       "1       GradientBoostingClassifier()     0.839092    0.838527  0.837815\n",
+       "2                    MultinomialNB()     0.837781    0.835216  0.834671\n",
+       "3               AdaBoostClassifier()     0.831822    0.832066  0.830591"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a list to store each model's results in a dictionary, adapted from RInsler code\n",
+    "classifier_list = []\n",
+    "\n",
+    "for model_obj in model_list:\n",
+    "    #instantiate each model \n",
+    "    model = model_obj\n",
+    "\n",
+    "    #fit the model\n",
+    "    model.fit(X_train_tidf, y_train) \n",
+    "  \n",
+    "    #create a dictionary with scores and evaluation metrics for each model\n",
+    "    results_dict = {}    \n",
+    "    results_dict['model_name'] = str(model_obj)\n",
+    "    results_dict['train_score'] = model.score(X_train_tidf, y_train)\n",
+    "    results_dict['test_score'] = model.score(X_test_tidf, y_test)\n",
+    "    results_dict['cv_score'] = cross_val_score(model, X_train_tidf, y_train, cv = 3).mean()\n",
+    "        \n",
+    "    #add the dictionary to the list\n",
+    "    classifier_list.append(results_dict)\n",
+    "\n",
+    "#create a dataframe and display dictionary\n",
+    "results = pd.DataFrame(classifier_list)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
